@@ -1,3 +1,9 @@
+2006-06-12  Fred Fish  <fnf@specifix.com>
+
+	* emulparams/elf32bmip.sh (OTHER_SECTIONS): Keep the
+	".mdebug.<abi>" and ".gcc_compiled_long<size>" sections
+	generated by mips gcc.
+
 2006-06-09  Alan Modra  <amodra@bigpond.net.au>
 
 	* ldlang.h (lang_input_statement_type): Use bitfields for booleans.
